<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sso_topbar"
        >
        <ImageButton 
            android:layout_marginLeft="5dip"
            android:layout_centerVertical="true"
            android:id="@+id/imgbtn_top_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/v5_0_1_flipper_head_flip"/>
        <TextView 
            android:layout_toRightOf="@id/imgbtn_top_left"
            android:id="@+id/tv_top_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_top_center"
            android:textColor="@color/whilte"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dip"
            
            />
        <ImageButton 
            android:id="@+id/imgbtn_top_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/feed_refresh_arrow_pressed"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dip"/>
    </RelativeLayout>
    
    <LinearLayout 
         android:paddingTop="2dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/v5_0_1_comment_btn_layout_bg">
        <TextView
            android:paddingLeft="8dip" 
            android:id="@+id/tv_center_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_voice"
            android:drawableLeft="@drawable/secondary_bar_voice_unselected"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"/>    
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/v5_0_1_flipper_head_separator"/>
             <TextView 
                  android:paddingLeft="8dip" 
            android:id="@+id/tv_center_statues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_statues"
            android:drawableLeft="@drawable/secondary_bar_status_unselected"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            />  
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/v5_0_1_flipper_head_separator"/>
             <TextView 
                  android:paddingLeft="8dip" 
            android:id="@+id/tv_center_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_photo"
            android:drawableLeft="@drawable/secondary_bar_photo_unselected"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"/>   
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/v5_0_1_flipper_head_separator"/>
            <TextView 
                 android:paddingLeft="8dip" 
            android:id="@+id/tv_center_checkin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_checkin"
            android:drawableLeft="@drawable/secondary_bar_checkin_unselected"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"/>   
    </LinearLayout>
    <ImageView 
        android:paddingTop="2dip"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/new_feature_pic1"
        android:scaleType="fitXY"/>

</LinearLayout>